crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_level_pk_snapshot@table_level_pk_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Orders(models.Model):
    id = models.UUIDField(primary_key=True)
    customer_id = models.UUIDField()
    total = models.FloatField()

    class Meta:
        managed = False
        db_table = "orders"
