crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_level_pk_snapshot@table_level_pk_Drizzle.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 136
expression: rendered
---
export const orders = pgTable("orders", {
  id: uuid("id").primaryKey(),
  customerId: uuid("customer_id").notNull(),
  total: real("total").notNull(),
});
