crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__table_with_check_snapshot@table_with_check_Django.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from django.db import models


class Products(models.Model):
    id = models.IntegerField(primary_key=True)
    price = models.IntegerField()

    class Meta:
        managed = False
        db_table = "products"
